situation.h


typedef enum {
    SITUATION_SUCCESS                                       =   0,  
	SITUATION_ERROR_GENERAL                                	=   -1,  
    SITUATION_ERROR_NOT_IMPLEMENTED                        	=   -2,  
    SITUATION_ERROR_NOT_INITIALIZED                        	=   -3,  
    SITUATION_ERROR_ALREADY_INITIALIZED                    	=   -4,  
    SITUATION_ERROR_INIT_FAILED                            	=   -5,  
    SITUATION_ERROR_SHUTDOWN_FAILED                        	=   -6,  
    SITUATION_ERROR_INVALID_PARAM                          	=   -7,  
    SITUATION_ERROR_MEMORY_ALLOCATION                      	=   -8,  
    SITUATION_ERROR_INTERNAL_STATE_CORRUPTED               	=   -9,  
    SITUATION_ERROR_ASSERTION_FAILED                       	=  -10,  
    SITUATION_ERROR_UPDATE_AFTER_DRAW_VIOLATION            	=  -11,  
    SITUATION_ERROR_TIMER_SYSTEM                           	=  -20,  
	SITUATION_ERROR_THREAD_QUEUE_FULL  						=  -80,  
	SITUATION_ERROR_THREAD_VIOLATION   						=  -81,  
    SITUATION_ERROR_THREAD_CYCLE                            =  -82,  
    SITUATION_ERROR_THREAD_CREATION_FAILED                  =  -83,  
    SITUATION_ERROR_RENDER_BACKPRESSURE_TIMEOUT             =  -84,  
    SITUATION_ERROR_RENDER_LIST_INCOMPLETE                  =  -85,  
    SITUATION_ERROR_ARM_INTRINSICS_FAILED                   =  -86,  
	SITUATION_ERROR_COMMAND_EXECUTION_FAILED                =  -90,  
    SITUATION_ERROR_GLFW_FAILED                             = -100,  
    SITUATION_ERROR_WINDOW_CREATION_FAILED                  = -101,  
    SITUATION_ERROR_WINDOW_FOCUS_FAILED                     = -102,  
    SITUATION_ERROR_CLIPBOARD_FAILED                        = -103,  
    SITUATION_ERROR_CURSOR_CREATION_FAILED                  = -104,  
    SITUATION_ERROR_COM_INITIALIZATION_FAILED               = -110,  
    SITUATION_ERROR_DXGI_QUERY_FAILED                       = -111,  
    SITUATION_ERROR_WINDOW_FOCUS							= -120,  
    SITUATION_ERROR_DEVICE_QUERY							= -121,  
    SITUATION_ERROR_COM_FAILED								= -123,  
    SITUATION_ERROR_DXGI_FAILED								= -124,  
    SITUATION_ERROR_DISPLAY_QUERY                           = -200,  
    SITUATION_ERROR_DISPLAY_SET                             = -201,  
    SITUATION_ERROR_VIRTUAL_DISPLAY_LIMIT                   = -202,  
    SITUATION_ERROR_VIRTUAL_DISPLAY_INVALID_ID              = -203,  
    SITUATION_ERROR_DISPLAY_QUERY_FAILED                    = -210,  
    SITUATION_ERROR_DISPLAY_MODE_UNSUPPORTED                = -211,  
    SITUATION_ERROR_DISPLAY_MODE_SET_FAILED                 = -212,  
    SITUATION_ERROR_VIRTUAL_DISPLAY_LIMIT_REACHED           = -213,  
    SITUATION_ERROR_VIRTUAL_DISPLAY_NOT_FOUND               = -214,  
    SITUATION_ERROR_FILE_ACCESS                             = -300,  
    SITUATION_ERROR_PATH_NOT_FOUND                          = -301,  
    SITUATION_ERROR_PATH_INVALID                            = -302,  
    SITUATION_ERROR_PERMISSION_DENIED                       = -303,  
    SITUATION_ERROR_DISK_FULL                               = -304,  
    SITUATION_ERROR_FILE_LOCKED                             = -305,  
    SITUATION_ERROR_DIR_NOT_EMPTY                           = -306,  
    SITUATION_ERROR_FILE_ALREADY_EXISTS                     = -307,  
    SITUATION_ERROR_PATH_IS_DIRECTORY                       = -308,  
    SITUATION_ERROR_PATH_IS_FILE                            = -309,  
    SITUATION_ERROR_FILE_NOT_FOUND                          = -310,  
    SITUATION_ERROR_FILE_ACCESS_DENIED                      = -311,  
    SITUATION_ERROR_FILE_OPEN_FAILED                        = -312,  
    SITUATION_ERROR_FILE_READ_FAILED                        = -313,  
    SITUATION_ERROR_FILE_WRITE_FAILED                       = -314,  
    SITUATION_ERROR_FILE_TOO_LARGE                          = -315,  
    SITUATION_ERROR_DIRECTORY_CREATION_FAILED               = -316,  
    SITUATION_ERROR_HOTRELOAD_WATCHER_FAILED                = -320,  
    SITUATION_ERROR_HOTRELOAD_FILE_CHANGED_TOO_FAST         = -321,  
    SITUATION_ERROR_HOTRELOAD_GPU_SYNC_FAILED               = -322,  
    SITUATION_ERROR_AUDIO_CONTEXT                           = -400,  
    SITUATION_ERROR_AUDIO_DEVICE                            = -401,  
    SITUATION_ERROR_AUDIO_SOUND_LIMIT                       = -402,  
    SITUATION_ERROR_AUDIO_CONVERTER                         = -403,  
    SITUATION_ERROR_AUDIO_DECODING                          = -404,  
    SITUATION_ERROR_AUDIO_INVALID_OPERATION                 = -405,  
    SITUATION_ERROR_AUDIO_BACKEND_INIT_FAILED               = -410,  
    SITUATION_ERROR_AUDIO_DEVICE_INIT_FAILED                = -411,  
    SITUATION_ERROR_AUDIO_DEVICE_START_FAILED               = -412,  
    SITUATION_ERROR_AUDIO_DECODER_INIT_FAILED               = -413,  
    SITUATION_ERROR_AUDIO_DECODER_FORMAT_UNSUPPORTED        = -414,  
    SITUATION_ERROR_AUDIO_STREAM_ENDED                      = -415,  
    SITUATION_ERROR_AUDIO_SOUND_LIMIT_REACHED               = -420,  
    SITUATION_ERROR_AUDIO_CAPTURE_NOT_AVAILABLE             = -430,  
    SITUATION_ERROR_RESOURCE_INVALID                        = -500,  
    SITUATION_ERROR_BUFFER_INVALID_SIZE                     = -501,  
    SITUATION_ERROR_RENDER_COMMAND_FAILED                   = -502,  
    SITUATION_ERROR_RENDER_PASS_ACTIVE                      = -503,  
    SITUATION_ERROR_INVALID_RESOURCE_HANDLE                 = -510,  
    SITUATION_ERROR_RESOURCE_ALREADY_DESTROYED              = -511,  
    SITUATION_ERROR_BUFFER_MAP_FAILED                       = -512,  
    SITUATION_ERROR_BUFFER_OVERFLOW                         = -513,  
    SITUATION_ERROR_BUFFER_INVALID_USAGE                    = -514,  
    SITUATION_ERROR_TEXTURE_UPLOAD_FAILED                   = -520,  
    SITUATION_ERROR_NO_ACTIVE_COMMAND_BUFFER                = -530,  
    SITUATION_ERROR_COMMAND_BUFFER_FULL                     = -531,  
    SITUATION_ERROR_NO_RENDER_PASS_ACTIVE                   = -540,  
    SITUATION_ERROR_RENDER_PASS_ALREADY_ACTIVE              = -541,  
    SITUATION_ERROR_BACKEND_MISMATCH                        = -550,  
    SITUATION_ERROR_PIPELINE_BIND_FAIL                      = -552,  
    SITUATION_ERROR_OPENGL_GENERAL                          = -600,  
    SITUATION_ERROR_OPENGL_LOADER_FAILED                    = -601,  
    SITUATION_ERROR_OPENGL_UNSUPPORTED                      = -602,  
    SITUATION_ERROR_OPENGL_SHADER_COMPILE                   = -610,  
    SITUATION_ERROR_OPENGL_SHADER_LINK                      = -611,  
    SITUATION_ERROR_OPENGL_FBO_INCOMPLETE                   = -620,  
    SITUATION_ERROR_OPENGL_CONTEXT_CREATION_FAILED          = -630,  
    SITUATION_ERROR_OPENGL_UNSUPPORTED_VERSION              = -631,  
    SITUATION_ERROR_OPENGL_SHADER_COMPILE_FAILED            = -632,  
    SITUATION_ERROR_OPENGL_SHADER_LINK_FAILED               = -633,  
    SITUATION_ERROR_OPENGL_PROGRAM_VALIDATION_FAILED        = -634,  
    SITUATION_ERROR_OPENGL_UNIFORM_NOT_FOUND                = -635,  
    SITUATION_ERROR_VULKAN_INIT_FAILED                      = -700,  
    SITUATION_ERROR_VULKAN_INSTANCE_FAILED                  = -701,  
    SITUATION_ERROR_VULKAN_DEVICE_FAILED                    = -702,  
    SITUATION_ERROR_VULKAN_UNSUPPORTED                      = -703,  
    SITUATION_ERROR_VULKAN_SWAPCHAIN_FAILED                 = -710,  
    SITUATION_ERROR_VULKAN_COMMAND_FAILED                   = -720,  
    SITUATION_ERROR_VULKAN_RENDERPASS_FAILED                = -730,  
    SITUATION_ERROR_VULKAN_FRAMEBUFFER_FAILED               = -731,  
    SITUATION_ERROR_VULKAN_PIPELINE_FAILED                  = -732,  
    SITUATION_ERROR_VULKAN_SYNC_OBJECT_FAILED               = -733,  
    SITUATION_ERROR_VULKAN_MEMORY_ALLOC_FAILED              = -734,  
    SITUATION_ERROR_VULKAN_DESCRIPTOR_FAILED                = -735,  
    SITUATION_ERROR_VULKAN_INSTANCE_CREATION_FAILED         = -740,  
    SITUATION_ERROR_VULKAN_PHYSICAL_DEVICE_UNSUITABLE       = -741,  
    SITUATION_ERROR_VULKAN_DEVICE_CREATION_FAILED           = -742,  
    SITUATION_ERROR_VULKAN_SWAPCHAIN_CREATION_FAILED        = -743,  
    SITUATION_ERROR_VULKAN_SWAPCHAIN_INVALID                = -744,  
    SITUATION_ERROR_VULKAN_IMAGE_ACQUIRE_FAILED             = -745,  
    SITUATION_ERROR_VULKAN_QUEUE_SUBMIT_FAILED              = -746,  
    SITUATION_ERROR_VULKAN_PIPELINE_CREATION_FAILED         = -747,  
    SITUATION_ERROR_VULKAN_SHADER_MODULE_FAILED             = -748,  
    SITUATION_ERROR_VULKAN_DESCRIPTOR_POOL_EXHAUSTED        = -749,  
    SITUATION_ERROR_VULKAN_MEMORY_ALLOCATION_FAILED         = -750,  
    SITUATION_ERROR_VULKAN_VALIDATION_LAYER_ERROR           = -751,  
    SITUATION_ERROR_SHADER_COMPILATION_FAILED               = -752,  
    SITUATION_ERROR_COMPUTE_PIPELINE_CREATION_FAILED        = -800,  
    SITUATION_ERROR_COMPUTE_DISPATCH_FAILED                 = -801,  
    SITUATION_ERROR_COMPUTE_BUFFER_BINDING_MISSING          = -802,  
    SITUATION_ERROR_NETWORK_INIT_FAILED                     = -900,  
    SITUATION_ERROR_NETWORK_SOCKET_CREATION_FAILED          = -901,  
    SITUATION_ERROR_NETWORK_CONNECTION_FAILED               = -902,  
    SITUATION_ERROR_NETWORK_SEND_FAILED                     = -903,  
    SITUATION_ERROR_NETWORK_RECEIVE_FAILED                  = -904,  
    SITUATION_ERROR_NETWORK_BIND_FAILED                     = -905,  
    SITUATION_ERROR_NETWORK_LISTEN_FAILED                   = -906,  
    SITUATION_ERROR_NETWORK_ACCEPT_FAILED                   = -907,  
    SITUATION_ERROR_UNKNOWN_ERROR                           = -999,  
} SituationError;
typedef uint32_t SituationJobId;
typedef struct SituationJob {
    atomic_ushort generation;
    void (*func)(void*, void*);
    atomic_int dependency_count;        
    atomic_uint_least32_t continuation_id; 
    uint8_t dep_depth;                  
    bool uses_large_data;               
    bool owns_memory;                   
    #if defined(__stdalign_h)
    alignas(16) uint8_t storage[SITUATION_JOB_PAYLOAD_MAX];
    #else
    uint8_t storage[SITUATION_JOB_PAYLOAD_MAX]; 
    #endif
    void* large_data_ptr;
    atomic_bool is_completed;
} SituationJob;
typedef struct SituationThreadPool {
    bool is_active;
    thrd_t threads[SITUATION_MAX_THREADS];
    size_t thread_count;
    struct {
        SituationJob* jobs;
        size_t capacity;
        size_t mask;        
        atomic_size_t head; 
        atomic_size_t tail; 
        mtx_t lock;         
    } queues[2];
    cnd_t wake_condition;   
    cnd_t idle_condition;   
    thrd_t io_thread;
    atomic_bool io_active;
    atomic_int active_jobs; 
    atomic_bool shutdown;
    char _padding[64];      
} SituationThreadPool;
typedef struct ColorYPQA { unsigned char y, p, q, a; } ColorYPQA; 
SITAPI bool SituationWindowShouldClose(void);                                           
SITAPI bool SituationWaitForJob(SituationThreadPool* pool, SituationJobId job_id); 
SITAPI bool SituationWindowShouldClose(void) {
    if (!SituationIsInitialized() || !sit_gs.sit_glfw_window) {
        _SituationSetErrorFromCode(SITUATION_ERROR_NOT_INITIALIZED, "Cannot check window close state");
        return true; 
    }
    return glfwWindowShouldClose(sit_gs.sit_glfw_window) == GLFW_TRUE;
}
SITAPI bool SituationWaitForJob(SituationThreadPool* pool, SituationJobId job_id) {
    SIT_ASSERT_MAIN_THREAD();
    if (job_id == 0) return true; 
    uint32_t q_idx = (job_id >> SIT_ID_QUEUE_SHIFT) & 1;
    uint32_t slot_idx = job_id & SIT_ID_SLOT_MASK;
    uint32_t expected_gen = (job_id >> SIT_ID_GEN_SHIFT) & SIT_ID_GEN_MASK;
    SituationJob* job = &pool->queues[q_idx].jobs[slot_idx];
    while (true) {
        uint16_t current_gen = atomic_load(&job->generation);
        if (current_gen != (uint16_t)expected_gen) return true;
        if (atomic_load(&job->is_completed)) return true;
        struct timespec ts = { .tv_sec = 0, .tv_nsec = 1000 }; 
        thrd_sleep(&ts, NULL);
    }
}