sit/situation_impl_color.h


SITAPI SituationError SituationYpqAnalyzeRgbMapping(SituationYpqRgbMappingStats* out) {
    if (!out) {
        return SITUATION_ERROR_INVALID_PARAM;
    }
    memset(out, 0, sizeof(*out));
    uint8_t* hit = (uint8_t*)SIT_CALLOC(1 << 24, 1);
    if (!hit) {
        return SITUATION_ERROR_MEMORY_ALLOCATION;
    }
    int64_t unique_rgb = 0;
    for (int y = 0; y < 256; y++) {
        for (int p = 0; p < 256; p++) {
            for (int q = 0; q < 256; q++) {
                ColorRGBA rgb = _SitRgbFromYpqBytes(
                    (ColorYPQA){(unsigned char)y, (unsigned char)p, (unsigned char)q, 255});
                uint32_t key = ((uint32_t)rgb.r << 16)
                             | ((uint32_t)rgb.g << 8)
                             | (uint32_t)rgb.b;
                if (!hit[key]) {
                    hit[key] = 1;
                    unique_rgb++;
                }
            }
        }
    }
    out->ypq_mappings       = 256LL * 256LL * 256LL;
    out->unique_rgb         = unique_rgb;
    out->duplicate_mappings = out->ypq_mappings - unique_rgb;
    out->rgb_holes          = (1LL << 24) - unique_rgb;
    int worst_dup = 0;
    int worst_at  = 0;
    for (int q = 0; q < 256; q++) {
        memset(hit, 0, (size_t)(1 << 24));
        int slice_unique = 0;
        for (int y = 0; y < 256; y++) {
            for (int p = 0; p < 256; p++) {
                ColorRGBA rgb = _SitRgbFromYpqBytes(
                    (ColorYPQA){(unsigned char)y, (unsigned char)p, (unsigned char)q, 255});
                uint32_t key = ((uint32_t)rgb.r << 16)
                             | ((uint32_t)rgb.g << 8)
                             | (uint32_t)rgb.b;
                if (!hit[key]) {
                    hit[key] = 1;
                    slice_unique++;
                }
            }
        }
        int slice_dup = 65536 - slice_unique;
        if (slice_dup > worst_dup) {
            worst_dup = slice_dup;
            worst_at  = q;
        }
    }
    SIT_FREE(hit);
    out->worst_axis_dup = worst_dup;
    out->worst_axis_at  = worst_at;
    return SITUATION_SUCCESS;
}
SITAPI SituationError SituationYpqSliceDuplicateCount(char axis, int value, int* out_dup) {
    if ((axis != 'Y' && axis != 'P' && axis != 'Q')
            || value < 0 || value > 255
            || !out_dup) {
        return SITUATION_ERROR_INVALID_PARAM;
    }
    uint32_t* keys = (uint32_t*)SIT_MALLOC(65536u * sizeof(uint32_t));
    uint32_t* temp = (uint32_t*)SIT_MALLOC(65536u * sizeof(uint32_t));
    if (!keys || !temp) {
        SIT_FREE(keys);
        SIT_FREE(temp);
        return SITUATION_ERROR_MEMORY_ALLOCATION;
    }
    int idx = 0;
    for (int a = 0; a < 256; a++) {
        for (int b = 0; b < 256; b++) {
            unsigned char cy, cp, cq;
            if (axis == 'Y') {
                cy = (unsigned char)value;
                cp = (unsigned char)a;
                cq = (unsigned char)b;
            } else if (axis == 'P') {
                cy = (unsigned char)a;
                cp = (unsigned char)value;
                cq = (unsigned char)b;
            } else { 
                cy = (unsigned char)a;
                cp = (unsigned char)b;
                cq = (unsigned char)value;
            }
            ColorRGBA rgb = _SitRgbFromYpqBytes((ColorYPQA){cy, cp, cq, 255});
            keys[idx++] = ((uint32_t)rgb.r << 16) | ((uint32_t)rgb.g << 8) | (uint32_t)rgb.b;
        }
    }
    uint32_t count[256];
    uint32_t* src = keys;
    uint32_t* dst = temp;
    for (int pass = 0; pass < 4; pass++) {
        memset(count, 0, sizeof(count));
        const int shift = pass * 8;
        for (int i = 0; i < 65536; i++) {
            count[(src[i] >> shift) & 0xffu]++;
        }
        int pos = 0;
        for (int bi = 0; bi < 256; bi++) {
            const int c = count[bi];
            count[bi] = pos;
            pos += c;
        }
        for (int i = 0; i < 65536; i++) {
            const int bi = (src[i] >> shift) & 0xffu;
            dst[count[bi]++] = src[i];
        }
        uint32_t* swap = src;
        src = dst;
        dst = swap;
    }
    if (src != keys) {
        memcpy(keys, src, 65536u * sizeof(uint32_t));
    }
    int dup = 0;
    for (int i = 1; i < 65536; i++) {
        if (keys[i] == keys[i - 1]) {
            dup++;
        }
    }
    SIT_FREE(temp);
    SIT_FREE(keys);
    *out_dup = dup;
    return SITUATION_SUCCESS;
}
SITAPI ColorYPQA SituationYpqLerp(ColorYPQA color1, ColorYPQA color2, float t) {
    if (t <= 0.0f) {
        return color1;
    }
    if (t >= 1.0f) {
        return color2;
    }
    float y = (float)color1.y + ((float)color2.y - (float)color1.y) * t;
    float q = (float)color1.q + ((float)color2.q - (float)color1.q) * t;
    float a = (float)color1.a + ((float)color2.a - (float)color1.a) * t;
    float p1 = (float)_SitYpqPhaseByteToRadians(color1.p);
    float p2 = (float)_SitYpqPhaseByteToRadians(color2.p);
    float dp = p2 - p1;
    if (dp > (float)M_PI) {
        dp -= (float)(2.0 * M_PI);
    }
    if (dp < -(float)M_PI) {
        dp += (float)(2.0 * M_PI);
    }
    float p_interp = p1 + dp * t;
    if (p_interp < 0.0f) {
        p_interp += (float)(2.0 * M_PI);
    }
    if (p_interp >= (float)(2.0 * M_PI)) {
        p_interp -= (float)(2.0 * M_PI);
    }
    ColorYPQA result;
    if (y < 0.0f) {
        y = 0.0f;
    }
    if (y > 255.0f) {
        y = 255.0f;
    }
    if (q < 0.0f) {
        q = 0.0f;
    }
    if (q > 255.0f) {
        q = 255.0f;
    }
    if (a < 0.0f) {
        a = 0.0f;
    }
    if (a > 255.0f) {
        a = 255.0f;
    }
    result.y = (unsigned char)(y + 0.5f);
    result.p = _SitYpqPhaseRadiansToByte((double)p_interp);
    result.q = (unsigned char)(q + 0.5f);
    result.a = (unsigned char)(a + 0.5f);
    return result;
}
SITAPI ColorYPQA SituationYpqAdjustLuma(ColorYPQA color, float luma_factor) {
    float new_y = (float)color.y * luma_factor;
    if (new_y < 0.0f) {
        new_y = 0.0f;
    }
    if (new_y > 255.0f) {
        new_y = 255.0f;
    }
    return (ColorYPQA){(unsigned char)(new_y + 0.5f), color.p, color.q, color.a};
}
SITAPI ColorYPQA SituationYpqAdjustPhase(ColorYPQA color, int phase_shift) {
    int new_p = (int)color.p + phase_shift;
    while (new_p < 0) {
        new_p += 256;
    }
    while (new_p >= 256) {
        new_p -= 256;
    }
    return (ColorYPQA){color.y, (unsigned char)new_p, color.q, color.a};
}
SITAPI ColorYPQA SituationYpqAdjustChroma(ColorYPQA color, float chroma_factor) {
    float new_q = (float)color.q * chroma_factor;
    if (new_q < 0.0f) {
        new_q = 0.0f;
    }
    if (new_q > 255.0f) {
        new_q = 255.0f;
    }
    return (ColorYPQA){color.y, color.p, (unsigned char)(new_q + 0.5f), color.a};
}
SITAPI float SituationYpqGetLuma(ColorYPQA color) {
    return (float)color.y / 255.0f;
}
SITAPI float SituationYpqGetHueDegrees(ColorYPQA color) {
    return ((float)color.p / 255.0f) * 360.0f;
}
SITAPI float SituationYpqGetChroma(ColorYPQA color) {
    return (float)color.q / 255.0f;
}
SITAPI float SituationYpqDistance(ColorYPQA a, ColorYPQA b) {
    float dy = ((float)a.y - (float)b.y) / 255.0f;
    float dq = ((float)a.q - (float)b.q) / 255.0f;
    int dp_byte = (int)a.p - (int)b.p;
    if (dp_byte < 0) {
        dp_byte = -dp_byte;
    }
    if (dp_byte > 128) {
        dp_byte = 256 - dp_byte;
    }
    float dp = (float)dp_byte / 128.0f;
    return sqrtf(dy * dy + dp * dp + dq * dq);
}
SITAPI bool SituationYpqEquals(ColorYPQA a, ColorYPQA b, unsigned char tolerance) {
    return abs((int)a.y - (int)b.y) <= (int)tolerance
        && abs((int)a.p - (int)b.p) <= (int)tolerance
        && abs((int)a.q - (int)b.q) <= (int)tolerance
        && abs((int)a.a - (int)b.a) <= (int)tolerance;
}
SITAPI ColorRGBA10 SituationYpqToRgba10(ColorYPQf ypq) {
    return _SitRgb10FromYpqFloat(ypq);
}
SITAPI uint32_t SituationYpqToRgb10Packed(ColorYPQf ypq) {
    return _SitRgb10PackedFromRgba10(_SitRgb10FromYpqFloat(ypq));
}
SITAPI uint32_t SituationYpqToRgb10PackedHdr(ColorYPQf ypq) {
    return _SitRgb10PackedHdrFromYpqFloat(ypq);
}
SITAPI ColorYPQA SituationYpqQuantize(ColorYPQf ypq) {
    return _SitYpqBytesFromFloat(ypq);
}
SITAPI ColorYPQf SituationYpqClampInGamut(ColorYPQf ypq) {
    ColorYPQf result = ypq;
    result.y = _SitYpqClampUnitFloat(result.y);
    result.p = _SitYpqClampUnitFloat(result.p);
    result.q = _SitYpqClampUnitFloat(result.q);
    result.a = _SitYpqClampUnitFloat(result.a);
    double r = 0.0;
    double g = 0.0;
    double b = 0.0;
    if (_SitYpqFloatRgbLinearInGamut(result, &r, &g, &b)) {
        return result;
    }
    float q_lo = 0.0f;
    float q_hi = result.q;
    for (int i = 0; i < 16; i++) {
        float q_mid = (q_lo + q_hi) * 0.5f;
        ColorYPQf trial = result;
        trial.q = q_mid;
        if (_SitYpqFloatRgbLinearInGamut(trial, &r, &g, &b)) {
            q_lo = q_mid;
        } else {
            q_hi = q_mid;
        }
    }
    result.q = q_lo;
    return result;
}