wrappers/Odin/situation_foreign.odin


    // Waits for a specific job to complete (O(1) check).
    SituationWaitForJob :: proc(pool: ^Situation_Thread_Pool, job_id: Situation_Job_Id) -> Situation_Error ---

    // Check if the application should close (e.g., user clicked X).
    SituationWindowShouldClose :: proc() -> b8 ---

    // Scale Q (chroma amplitude); preserve luma and phase.
    SituationYpqAdjustChroma :: proc(color: Color_YPQA, chroma_factor: f32) -> Color_YPQA ---

    // Scale Y (luma); preserve phase and chroma.
    SituationYpqAdjustLuma :: proc(color: Color_YPQA, luma_factor: f32) -> Color_YPQA ---

    // Rotate hue; P shifts by byte steps mod 256.
    SituationYpqAdjustPhase :: proc(color: Color_YPQA, phase_shift: c.int) -> Color_YPQA ---

    SituationYpqAnalyzeRgbMapping :: proc(out: ^Situation_Ypq_Rgb_Mapping_Stats) -> Situation_Error ---
    // Reduce chroma if linear RGB would clip.
    SituationYpqClampInGamut :: proc(ypq: Color_YP_Qf) -> Color_YP_Qf ---

    // Weighted distance in YPQ space.
    SituationYpqDistance :: proc(a: Color_YPQA, b: Color_YPQA) -> f32 ---

    // Per-channel tolerance compare.
    SituationYpqEquals :: proc(a: Color_YPQA, b: Color_YPQA, tolerance: u8) -> b8 ---

    // Normalized chroma amplitude [0, 1].
    SituationYpqGetChroma :: proc(color: Color_YPQA) -> f32 ---

    // Hue in degrees [0, 360).
    SituationYpqGetHueDegrees :: proc(color: Color_YPQA) -> f32 ---

    // Normalized luma [0, 1].
    SituationYpqGetLuma :: proc(color: Color_YPQA) -> f32 ---

    // Interpolate YPQ; phase uses shortest arc on the hue wheel.
    SituationYpqLerp :: proc(a: Color_YPQA, b: Color_YPQA, t: f32) -> Color_YPQA ---

    // Float YPQ → 8-bit ColorYPQA.
    SituationYpqQuantize :: proc(ypq: Color_YP_Qf) -> Color_YPQA ---

    SituationYpqSliceDuplicateCount :: proc(axis: c.char, value: c.int, out_dup: ^c.int) -> Situation_Error ---
    // Float YPQ → A2R10G10B10 packed pixel (10-bit SDR).
    SituationYpqToRgb10Packed :: proc(ypq: Color_YP_Qf) -> u32 ---

    // Float YPQ → PQ-encoded A2R10G10B10 (HDR10 swapchain).
    SituationYpqToRgb10PackedHdr :: proc(ypq: Color_YP_Qf) -> u32 ---

    // Float YPQ → 10-bit RGBA (linear YIQ, clamped).
    SituationYpqToRgba10 :: proc(ypq: Color_YP_Qf) -> Color_RGBA10 ---

}
